--- a/user_store/pom.xml
+++ b/user_store/pom.xml
@@ -16,18 +16,28 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<github.global.server>github</github.global.server>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>release-staging</id>
+			<url>file://${project.build.directory}/release/</url>
+		</repository>
+		<snapshotRepository>
+			<id>developer-staging</id>
+			<url>file://${project.build.directory}/staging/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
-			<version>2.1.3.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.15</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -64,6 +74,18 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<!-- Swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -72,6 +94,35 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.11</version>
+				<configuration>
+					<outputDirectory>${project.build.directory}/staging/</outputDirectory>
+					<includes>
+						<include>**/*</include>
+						<repositoryOwner>purvanovv</repositoryOwner>
+						<repositoryName>User-Store-SNAPSHOOTS</repositoryName>
+						<branch>master</branch>
+						<message>Deploy artifacts for ${project.version}</message>
+					</includes>
+				</configuration>
+				<executions>
+					<execution>
+						<id></id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<inherited>false</inherited>
+						<configuration>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
