--- a/user_store/pom.xml
+++ b/user_store/pom.xml
@@ -19,6 +19,11 @@
 		<github.global.server>github</github.global.server>
 	</properties>
 
+	<scm>
+		<connection>scm:git:https://github.com/purvanovv/User-Store-SNAPSHOOTS</connection>
+		<developerConnection>scm:git:https://github.com/purvanovv/User-Store-SNAPSHOOTS</developerConnection>
+	</scm>
+
 	<distributionManagement>
 		<repository>
 			<id>release-staging</id>
@@ -96,31 +101,12 @@
 			</plugin>
 
 			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.11</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
 				<configuration>
-					<outputDirectory>${project.build.directory}/staging/</outputDirectory>
-					<includes>
-						<include>**/*</include>
-						<repositoryOwner>purvanovv</repositoryOwner>
-						<repositoryName>User-Store-SNAPSHOOTS</repositoryName>
-						<branch>master</branch>
-						<message>Deploy artifacts for ${project.version}</message>
-					</includes>
+					<tagNameFormat>r-${project.version}</tagNameFormat>
 				</configuration>
-				<executions>
-					<execution>
-						<id></id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<inherited>false</inherited>
-						<configuration>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 
 		</plugins>
